--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
+    "prettier-plugin-prisma": "^3.9.0",
     "prisma": "^3.9.1",
     "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
